[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "certadmin"
version = "1.0.0"
description = "Command-line utility for managing client certificates in a private OpenSSL-based PKI"
authors = [
    { name = "Anique van Berne" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Repository = "https://github.com/Anique11/certadmin"
Issues = "https://github.com/Anique11/certadmin/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
certadmin = "certadmin.certadmin:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = "-v --tb=short"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = [
    "certadmin*",
]
