[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "certadmin"
version = "1.0.0"
description = "Command-line utility for managing client certificates in a private OpenSSL-based PKI"
authors = [
    { name = "Anique van Berne" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Repository = "https://github.com/Anique11/certadmin"
Issues = "https://github.com/Anique11/certadmin/issues"

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "mypy>=1.0",
    "pytest>=7.0",
    "ruff>=0.8",
]

[project.scripts]
certadmin = "certadmin.certadmin:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = "-v --tb=short"

[tool.mypy]
files = [
    "certadmin",
    "tests",
]
python_version = "3.13"

[tool.ruff]
target-version = "py313"

[tool.coverage.report]
fail_under = 77

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = [
    "certadmin*",
]
